fixed bug of visibility:hidden to display:none (so there's no gap between the multiple family cards

--- a/css/spyro.css
+++ b/css/spyro.css
@@ -245,10 +245,10 @@ p {
     background-color: teal; 
     width: 15%; 
     height: 200px; 
-    display: inline-block;
+    /*display: inline-block;*/
+    display:none;
     margin-left: 15px;
     margin-right: 15px;
-    visibility: hidden;
 }
 
 
